...
    <string name="tvshow">TV SHOW</string>
    <string name="title">Title :</string>
    <string name="date_release">Date Release :</string>
    <string name="overview">Overview :</string>

    <string name="movie_now_playing">NOW PLAYING</string>
    <string name="movie_popular">POPULAR</string>
    <string name="movie_top_related">TOP RELATED</string>
    <string name="movie_upcoming">UPCOMING</string>
    <string name="now_playing">Now Playing</string>
    <string name="status">Status :</string>
    <string name="runtime">Runtime :</string>
    <string name="vote_average">Vote Average :</string>
    <string name="vote_count">Vote Count :</string>
    <string name="keywords">Keywords :</string>
...
