<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/container_movie"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/background01"
             tools:context=".ui.fragment.movie.MovieFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/parent_video">

        <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_light"
                android:id="@+id/appbar_layout">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:contentScrim="@android:color/white"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    android:id="@+id/collapsing_toolbar">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_8sdp"
                        android:background="@android:color/white"
                        android:orientation="vertical">

                    <TextView
                            android:text="@string/now_playing"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_movie_now_playing"
                            android:layout_margin="@dimen/_8sdp"
                            android:layout_gravity="center"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                    </androidx.recyclerview.widget.RecyclerView>

                    <ProgressBar
                            android:id="@+id/progress_content_movie_now_playing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="15dp" />

                </LinearLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabSelectedTextColor="@android:color/white"
                    app:tabTextColor="@android:color/white"
                    android:layout_gravity="bottom"/>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_movie"
                    android:layout_gravity="center"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
            </androidx.recyclerview.widget.RecyclerView>

            <ProgressBar
                    android:id="@+id/progress_content_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>